# stub-cpp-python3

./: .gitignore  CMakeLists.txt  main.cpp
